--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
                 <input type="text" placeholder="Enter City Name" spellcheck="false">
                 <button><img src="./images/search.png"/></button>
             </div>
+            <div class="weather">
+                <img src="./images/rain.png" class="weather-icon">
+                <h1 class="temp">22 °C</h1>
+                <h2 class="city">New York</h2>
+
+                <div class="details">
+
+                    <div class="col">
+                        <img src="./images/humidity.png">
+                        <div>
+                            <p class="humidity">57.5%</p>
+                            <p>Humadity</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="./images/wind.png">
+                        <div>
+                            <p class="wind">15 km/h</p>
+                            <p>Wind</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
         <script src="index.js"></script>
     </body>
